...
              ),
            ],
          ),
        ),
        SizedBox(width: screenWidth * 0.02),
        GestureDetector(
          key: const Key('alreadyHaveAccountButton'), // Add the key here
          onTap: () {
            Navigator.pushReplacementNamed(context, '/login');
          },
          child: Container(
            padding: EdgeInsets.symmetric(
              horizontal: screenWidth * 0.02,
...
