...
          backgroundColor: Colors.amber,
        ),
        child: const Text("Publish"),
      );
    } else if (widget.gift.status == "Published") {
      return ElevatedButton(
        key: const Key('PledgeButton'), // Add a unique key here
        onPressed: widget.onPledge,
        style: ElevatedButton.styleFrom(
          backgroundColor: Colors.blue,
        ),
        child: const Text("Pledge"),
      );
...
